--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
+@import "node_modules/bootstrap/scss/bootstrap";
 
 * {
   box-sizing: border-box;
@@ -9,23 +10,9 @@
 body {
   font-family: 'Roboto', sans-serif;
   font-size: 1rem;
-  line-height: 1.6;
+  line-height: 2;
   background-color: #fff;
-  color: #333;
-}
-
-.container {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 1rem;
-}
-
-a {
-  text-decoration: none;
-}
-
-a:hover {
-  color: #666;
+  color: #000;
 }
 
 ul {
@@ -34,85 +21,6 @@ ul {
 
 img {
   width: 100%;
-}
-
-.btn {
-  display: inline-block;
-  background: #333333;
-  color: #fff;
-  padding: 0.4rem 1.3rem;
-  font-size: 1rem;
-  border: none;
-  cursor: pointer;
-  margin-right: 0.5rem;
-  transition: opacity 0.2s ease-in;
-  outline: none;
-
-  &:disabled {
-    background: #ccc;
-    color: #000;
-    cursor: not-allowed;
-  }
-
-  &:hover {
-    opacity: 0.8;
-  }
-}
-
-.btn.btn-danger {
-  background: #dc3545;
-  color: #fff;
-}
-
-.btn.btn-success {
-  background: #198754;
-  color: #fff;
-}
-
-.btn.btn-primary {
-  background: #0d6efd;
-  color: #fff;
-}
-
-.btn.btn-info {
-  background: #0dcaf0;
-  color: #fff;
-}
-
-.form-control {
-  display: block;
-  margin-top: 0.3rem;
-  margin-bottom: .5rem;
-
-  label {
-    display: block;
-    font-weight: bold;
-    font-size: 1rem;
-    margin-bottom: .5rem;
-  }
-
-  input {
-    margin-bottom: 1rem;
-  }
-
-  .validation {
-    color: red;
-  }
-}
-
-.card {
-  padding: 1rem;
-  border: #ccc 1px dotted;
-  margin: 0.7rem 0;
-
-  p {
-    display: flex;
-    justify-content: space-between;
-
-    span.completed {
-      text-decoration: line-through;
-    }
-  }
 }
 
 input,
@@ -127,5 +35,5 @@ textarea {
 }
 
 hr {
-  margin: .5rem 0;
+  margin: 2rem 0;
 }
